Fixes 15.12.16. Popup page. Popup z-index. add style.min.css

--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,7 @@ a {
     color: #283136;
 
     border: none;
+    outline: none;
     border-radius: 5px;
     background-color: #eeeeee;
 }
@@ -1228,6 +1229,7 @@ a {
     left: 50%;
     top: 1756px;
 
+
     display: none;
 
     width: 760px;
@@ -1246,6 +1248,7 @@ a {
 .modal-content-show {
     display: block;
     animation: bounce 0.6s;
+    z-index: 500;
 }
 
 .modal-error {
@@ -1362,3 +1365,88 @@ a {
 .modal-content-user-message textarea:focus {
     border-color: #000000;
 }
+
+.modal-content-feedback {
+    display: block;
+    width: 770px;
+    margin: 50px auto;
+   padding-bottom: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+.radio-zone {
+    margin-bottom: 50px;
+}
+
+.radio-zone ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.radio-zone li {
+    margin-bottom: 23px;
+}
+
+.radio-zone label input[type="radio"] {
+    display: none;
+}
+
+
+.grid {
+    position: relative;
+
+    padding-left: 40px;
+
+    cursor: pointer;
+}
+
+.grid:hover {
+    color: #000000;
+}
+
+.grid input[type="radio"] + .radio-indicator {
+    position: absolute;
+    top: -5px;
+    left: 0;
+
+    border-radius: 50%;
+    height: 21px;
+    width: 21px;
+
+    border: 4px solid #b8b8b8;
+}
+
+.grid input[type="radio"]:checked + .radio-indicator::before {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 6px;
+
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+
+    background-color: #b8b8b8;
+}
+
+*/
